--- a/src/app/view/pages/RegisterStudent.css
+++ b/src/app/view/pages/RegisterStudent.css
@@ -3,6 +3,10 @@ body {
     margin: 10px !important;
 }
 
+.student-form{
+    margin-top: 60%;
+}
+
 .register-container {
     max-width: 600px;
     margin: 0 auto;
