--- a/src/app/view/pages/RegisterStudent.css
+++ b/src/app/view/pages/RegisterStudent.css
@@ -7,7 +7,7 @@ body {
     margin-top: 60%;
 }
 
-.register-container {
+.register-container-student {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
