--- a/src/app/view/pages/Home.css
+++ b/src/app/view/pages/Home.css
@@ -311,4 +311,76 @@
 }
 
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.next-class {
+  text-align: center;
+  color: #333;
+}
+
+.carousel-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel-slides {
+  display: flex;
+  flex-wrap: nowrap;
+  transition: transform 0.3s ease-in-out;
+}
+
+.class-info {
+  min-width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.student-list span {
+  display: block;
+  margin: 5px 0;
+}
+
+.carousel-indicators {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.indicator {
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.indicator.active {
+  background-color: #333;
+}
+
   
